<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content" >

        <RadioButton
            android1:id="@+id/common"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/common" />

        <RadioButton
            android1:id="@+id/satellite"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/satellite" />

    </RadioGroup>

    <CheckBox
        android1:id="@+id/traffic"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:text="@string/traffic" />

    <Button
        android1:id="@+id/sure"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:text="@string/sure" />

</LinearLayout>